data/derived/sp14/progs/unify/prog0799.ml.out
Characters 233-247:
  | Times (ex1,ex2)   -> eval (ex1,x,y) * eval (ex2,x,y)
                         ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
